@@ -482,8 +482,8 @@ struct
      "named address space not allowed for automatic var '%s'", 0},
   { W_NORETURNRETURN, ERROR_LEVEL_WARNING,
      "return in _Noreturn function", 0},
-  { E_STRUCT_REDEF, ERROR_LEVEL_ERROR,
-     "struct/union '%s' redefined", 0 },
+  { E_STRUCT_REDEF_INCOMPATIBLE, ERROR_LEVEL_ERROR,
+     "struct/union '%s' redefined to incompatible type", 0 },
   { W_STRING_CANNOT_BE_TERMINATED, ERROR_LEVEL_PEDANTIC,
     "string '%s'cannot be terminated within array", 0 },
   { W_LONGLONG_LITERAL, ERROR_LEVEL_WARNING,
